@@ -69,3 +69,5 @@ ADD_CUSTOM_TARGET (qt-dotnet ALL ${GMCS_PATH} -unsafe -warn:0 -out:qt-dotnet.dll
 ADD_DEPENDENCIES (qt-dotnet qyoto)
 
 ADD_SUBDIRECTORY(examples)
+ADD_SUBDIRECTORY(tools)
+ADD_SUBDIRECTORY(uics)
