@@ -1,5 +1,11 @@
 
-include_directories( ${CMAKE_SOURCE_DIR}/uics/cs/ )
+include_directories( ${CMAKE_SOURCE_DIR}/uics )
+include_directories( ${CMAKE_SOURCE_DIR}/uics/cs )
+
+# find Qt4
+FIND_PACKAGE (Qt4 REQUIRED)
+INCLUDE_DIRECTORIES (${QT_INCLUDES})
+
 ########### next target ###############
 
 set(uics_bin_SRCS 
@@ -17,19 +23,15 @@ set(uics_bin_SRCS
    cs/cswriteinitialization.cpp 
    main.cpp )
 
-kde4_automoc(${uics_bin_SRCS})
-
-kde4_add_executable(uics_bin ${uics_bin_SRCS})
+add_executable(uics_bin ${uics_bin_SRCS})
 set_target_properties(uics_bin PROPERTIES OUTPUT_NAME uics)
 
-target_link_libraries(uics_bin  ${KDE4_KDECORE_LIBS} )
+target_link_libraries(uics_bin  ${QT_QTCORE_LIBRARY} ${QT_QTXML_LIBRARY} )
 
-install(TARGETS uics_bin DESTINATION ${BIN_INSTALL_DIR})
+install(TARGETS uics_bin DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 
 
 ########### next target ###############
 
 
 ########### install files ###############
-
-
