@@ -1,6 +1,7 @@
 2007-02-14  Richard Dale  <rdale@foton.es>
 
 	* Added cmake files for building the csrcc tool
+	* Fix the cmake file for building the uics tool
 
 2007-02-13  Richard Dale  <rdale@foton.es>
 
